add show tokens feature
