# src/app/api/generated-api/models.ts
@@ -2,7 +2,9 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { EvaluationSummary } from './models/evaluation-summary';
 export type { Ingredient } from './models/ingredient';
 export type { OrderedItem } from './models/ordered-item';
 export type { Product } from './models/product';
+export type { ProductSalesEntry } from './models/product-sales-entry';
 export type { PurchaseOrder } from './models/purchase-order';
